@@ -1,5 +1,7 @@
 Changes in version 1.0-19:
 
+* Fixed print.yai.R error when there is only one target and K>1.
+* Modified the file handeling in AsciiGridPredict (and AsciiGridImpute).
 * Fixed a case where a reference picks itself as the second most similar neighbor. This only
 happens when there are two or more identical reference observations (thanks to Petteri Packalen).
 * Further revision to the ftest to deal with degenerate cases and put in a trap on the use
